--- a/package.json
+++ b/package.json
@@ -9,13 +9,10 @@
   "author": "@PONDHALF",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/opus": "^0.5.3",
     "discord.js": "^12.5.3",
     "dotenv": "^10.0.0",
+    "opusscript": "^0.0.8",
     "yt-search": "^2.9.0",
     "ytdl-core": "^4.9.0"
-  },
-  "engines": {
-    "node": "14.x"
   }
 }
