--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "discord.js": "^12.5.3",
     "dotenv": "^10.0.0",
+    "minecraft-server-util": "^3.5.2",
     "opusscript": "^0.0.8",
     "yt-search": "^2.9.0",
     "ytdl-core": "^4.9.0"
