--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "minecraft-server-util": "^3.5.2",
     "opusscript": "^0.0.8",
     "yt-search": "^2.9.0",
-    "ytdl-core": "^4.9.0"
+    "ytdl-core": "^4.9.0",
+    "ytpl": "^2.2.3"
   }
 }
